third_party/move/move-compiler-v2/tests/more-v1/expansion/invalid_unpack_assign_lhs_not_name.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/invalid_unpack_assign_lhs_not_name.move:4:11
  │
4 │         0 { f } = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'
